# price-map

./: .nx-dotnet.rc.json  Cargo.toml  README.md  nx.json  package-lock.json  package.json
.github/: pull_request_template.md
.github/workflows/: backend.yml  frontend.yml  osrm-requester.yml  overpass-requester.yml  scraper.yml
apps/backend/: README.md  backup.sh
apps/backend/src/: main.ts
apps/frontend/: README.md  tsconfig.json
apps/frontend/src/: index.html  styles.scss
apps/osrm-requester/: Cargo.toml  README.md
apps/osrm-requester/src/: config.rs  coordinate.rs  lib.rs  logger.rs  main.rs  osrm.rs  rabbit.rs
apps/overpass-requester/: PriceMap.OverpassRequester.csproj
apps/overpass-requester/app/: App.cs
apps/overpass-requester/data/: nodes_nsk_not_water.json
apps/overpass-requester/models/: ProductIdShopMatch.cs
apps/scraper/: project.json  pyproject.toml
apps/scraper/scraper/entities/: category_1_level.py  characteristic.py
apps/scraper/scraper/services/: base_scraping.py  category_scraping.py  filter.py  product_scraping.py  rabbit.py
pm-back/: nx.json  package-lock.json  package.json
pm-front/: nx.json  package-lock.json  package.json
price-map/: .eslintignore  .eslintrc.json  .gitignore  .nx-dotnet.rc.json  .prettierrc  categories.json  nx.json  package-lock.json  package.json  test.json  tsconfig.base.json
price-map/apps/scraper/: README.md  pyproject.toml
price-map/apps/scraper/scraper/: index.py  logs.txt  test.py
price-map/apps/scraper/scraper/app/: app.py  config.py
price-map/apps/scraper/scraper/constants/: categories_routing_key.py  cookies.py  max_get_url_attempts.py  offers_per_product.py  products_out_routing_key.py  products_per_category.py  products_routing_key.py  scraper_exchange.py  url.py
price-map/apps/scraper/scraper/entities/: category_1_level.py  category_2_level.py  category_3_level.py  characteristic.py  filter.py  message.py  product.py  product_shop_match.py
price-map/apps/scraper/scraper/models/: categories_routing_key.py  cookies.py  driver-path.constant.py  driver_path.py  driver_path_constant.py  max-get-url-attempts.constant.py  max_get_url_attempts.py  scraper_exchange.py
price-map/apps/scraper/scraper/services/: base-scraping.service.py  base_scraping.py  base_scraping_service.py  category_scraping.py  logger.py  product_scraping.py  rabbit.py  scraping.py
price-map/apps/scraper/tests/: test_index.py
(+536 files in other folders)
