[package]
name = "osrm_requester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiquip = { version = "0.4", default-features = false }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
polyline = "0.10.0"
geo-types = "0.7.9"
chrono = "0.4.24"
serde_yaml = "0.9.21"
anyhow = "1.0"
